[gd_scene format=3 uid="uid://diqgew5imgyv3"]

[ext_resource type="Script" uid="uid://31irgbfan1k2" path="res://script/enemy_component/blink_component.gd" id="1_0voo3"]

[node name="BlinkComponent" type="Node2D" unique_id=2077482623]
script = ExtResource("1_0voo3")

[node name="Area2D" type="Area2D" parent="." unique_id=914532874]
collision_layer = 0
collision_mask = 32

[node name="BlinkInterval" type="Timer" parent="." unique_id=244976921]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="BlinkInterval" to="." method="_on_blink_interval_timeout"]
